[gd_scene load_steps=3 format=3 uid="uid://co6ofqmqo5rlm"]

[ext_resource type="Script" uid="uid://dmcu2b6bdjamj" path="res://scripts/menus/help_menu.gd" id="1_gq2hf"]
[ext_resource type="Theme" uid="uid://cj661i3baqy8q" path="res://themes/level_button.tres" id="2_jl27b"]

[node name="FinishedLevelMenu" type="CanvasLayer"]
script = ExtResource("1_gq2hf")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 500
theme_override_constants/margin_top = 300
theme_override_constants/margin_right = 500
theme_override_constants/margin_bottom = 300

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("2_jl27b")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HelpLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_jl27b")
text = "Help page"
horizontal_alignment = 1

[node name="InstructionsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_jl27b")
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 32
text = "Lorem impsum"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = ExtResource("2_jl27b")
text = "Close"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
